# enot-vp

./: README.md  pyproject.toml
src/enot_vp/: video_processor.py
src/enot_vp/backend/: pyav.py
